sửa đổi lần 1+ thêm about.html

--- a/about.html
+++ b/about.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dự án 4</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>dự án 4</h1>
-    <h2>sửa đổi lần 1</h2>
-    <h2>sửa đổi lần 2</h2>
+    <h1>dấddsa</h1>
   </body>
 </html>
